Correcting Grammars: edu-pages

--- a/edu-pages/college.html
+++ b/edu-pages/college.html
@@ -60,9 +60,8 @@
                 </a>
                 <h2>Wow! My Alumni ID 😲</h2>
                 <p class="study-para">
-                    Without this, I really can't believe that I am now a
-                    degree holder. After all those years I study and became student as well as
-                    pupil. <br> This is madness! Thank God!
+                    Without this, I really can't believe that I am now a degree holder. After all those years, I studied
+                    and became a student as well as a pupil. This is madness! Thank God! 😲
                 </p>
                 <h6>September 12, 2022</h6>
             </div>
@@ -74,7 +73,7 @@
                 <a href="../raw-data/img/my-history/college-tor-2.jpg" target="_blank">
                     <img class="study-img" src="../raw-data/img/my-history/college-tor-2.jpg">
                 </a>
-                <h2>My College Transcript of Records</h2>
+                <h2>My College TOR</h2>
                 <p class="study-para">
                     At last, I am now experiencing being a degree holder.
                 </p>
@@ -86,10 +85,9 @@
                     <img class="study-img" src="../raw-data/img/my-history/college-diploma-as.jpg">
                 </a>
                 <h2>My College Diploma<br>
-                    (Although unlike other diplomas 😂)</h2>
+                    (Although, unlike other diplomas 😂)</h2>
                 <p class="study-para">
-                    Looking at the sky, thinking about how far will I go
-                    into my future.
+                    Looking at the sky, I think about how far I will go in the future. 💙
                 </p>
                 <h6>September 5, 2022</h6>
             </div>
@@ -100,7 +98,7 @@
                 </a>
                 <h2>My "Tears of Joy" Event<br>(Graduation)</h2>
                 <p class="study-para">
-                    Finally, a big progress in my life. 😹 My dreams are near to achieve now.
+                    Finally, I made big progress in my life. 😌 My dreams are near to being achieved now.
                 </p>
                 <h6>July 23, 2022</h6>
             </div>
@@ -111,7 +109,7 @@
                 </a>
                 <h2>My NSTP Certificate of Completion</h2>
                 <p class="study-para">
-                    NSTP Classes are required to get in college when you are first year.
+                    NSTP classes are required to be taken in college in your first year. 🤷‍♂️
                 </p>
                 <h6>April 27, 2019</h6>
             </div>
@@ -122,8 +120,8 @@
                 </a>
                 <h2>My Filipino Club Certificate of Participation</h2>
                 <p class="study-para">
-                    I remember, I was a member of Filipino Club before when I was 1st year but after that,
-                    I no longer join them.
+                    I remember that I was a member of the Filipino Club when I was in my first year, but after that, I
+                    no longer joined them. 🤷‍♂️
                 </p>
                 <h6>November 24, 2018</h6>
             </div>
@@ -134,10 +132,9 @@
                 </a>
                 <h2>My College ID</h2>
                 <p class="study-para">
-                    Watching this makes me recall the time when I first entered college.
-                    I was so mysterious back then. I don't talk too much and always walk alone.
-                    And when I entered the class Filipino, my classmates thought of me as genius,
-                    and they made me their president of the class. Hayst! Those memories.
+                    Watching this makes me recall the time when I first entered college. I was so mysterious back then.
+                    I don't talk too much and always walk alone. And when I entered the Filipino class, my classmates
+                    thought of me as a genius, and they made me their president of the class. Hayst! Those memories. 😌
                 </p>
             </div>
 
@@ -147,7 +144,7 @@
                 </a>
                 <h2>My College Photo</h2>
                 <p class="study-para">
-                    Look stress but still managed to be handsome. 😊
+                    I looked stressed but still managed to be handsome. 😊
                 </p>
             </div>
 
