--- a/edu-pages/elem.html
+++ b/edu-pages/elem.html
@@ -61,9 +61,6 @@
                 <h2>My Elementary Diploma</h2>
                 <p class="study-para">
                     This is the first-ever progress in my life. <br>
-                    I am not that committed in studies before but my mind
-                    is more than my mind right now. 🤣 <br>
-                    I was totally genius before!
                 </p>
                 <h6>March 31, 2012</h6>
             </div>
@@ -74,13 +71,11 @@
                 </a>
                 <h2>My Elementary Photo</h2>
                 <p class="study-para">
-                    Watching this makes me remember the time when I started <br>
-                    to enter the world of studies. In my grade 1, many teachers and my family members got shocked <br>
-                    when I learned how to read and write just after a few days in school. <br>
-                    When I got into grade 3, a teacher, I forgot her name, have told my mother <br>
-                    that I shouldn't be exposed with books because I might end up being an <br>
-                    abnormal person. My mother followed it. <br>
-                    And here I am right now, half-genius, half-normal.
+                    Watching this makes me remember the time when I started to enter the world of study. In my first
+                    grade, many teachers and my family members were shocked when I learned how to read and write in just
+                    a few days of school. When I got into grade 3, a teacher—I forgot her name—told my mother that I
+                    shouldn't be exposed to books because I might end up being an abnormal person. My mother followed
+                    it. And here I am right now, half-genius, half-normal.
                 </p>
             </div>
         </div>
