--- a/edu-pages/hs.html
+++ b/edu-pages/hs.html
@@ -71,8 +71,8 @@
                 </a>
                 <h2>My High School Diploma</h2>
                 <p class="study-para">
-                    I graduated as a great student this time. <br>
-                    I remembered, my father used to brag to other people about me. 😌
+                    I graduated as a great student this time. I remembered that my father used to brag to other people
+                    about me. 😌
                 </p>
                 <h6>March 24, 2016</h6>
             </div>
@@ -82,10 +82,10 @@
                     <img class="study-img" src="../raw-data/img/my-history/hs-coa-student-council.jpg">
                 </a>
                 <h2>My Certificate of Appreciation <br>
-                    of being Officer in Department</h2>
+                    for being an Officer in the Department</h2>
                 <p class="study-para">
-                    I had a hard time before fulfilling all the task related to being an officer <br>
-                    in the whole Department, but it's worth it.
+                    I had a hard time fulfilling all the tasks related to being an officer in the whole department, but
+                    it's worth it. 💪
                 </p>
                 <h6>March 24, 2016</h6>
             </div>
@@ -94,10 +94,10 @@
                 <a href="../raw-data/img/my-history/hs-cop-newsmaking-seminar.jpg" target="_blank">
                     <img class="study-img" src="../raw-data/img/my-history/hs-cop-newsmaking-seminar.jpg">
                 </a>
-                <h2>News making Seminar Certification</h2>
+                <h2>Newsmaking's Seminar Certification</h2>
                 <p class="study-para">
-                    As one of the pride of SMII before, I am required to join all of the school <br>
-                    external events, and this is one of those events.
+                    As one of the prides of SMII, I am required to join all of the school's external events, and this is
+                    one of those events. 😎
                 </p>
                 <h6>May 10, 2015</h6>
             </div>
@@ -108,8 +108,7 @@
                 </a>
                 <h2>My High School Photo</h2>
                 <p class="study-para">
-                    This is my look when I am in High School. <br>
-                    I used to be some kind of famous boy in school, lol. <br>
+                    This is my look when I am in High School. I used to be some kind of famous boy in school, lol.
                 </p>
             </div>
         </div>
