--- a/edu-pages/shs.html
+++ b/edu-pages/shs.html
@@ -50,7 +50,7 @@
             </a>
             <div>
                 <h2>Mindanao State University &mdash;Sulu, Senior High School Department</h2>
-                <h5 class="text-center">The school where I started to realize that there are more.</h5>
+                <h5 class="text-center">The school where I started to realize that there are more</h5>
                 <h6 class="text-center">2016 &ndash; 2018</h6>
             </div>
 
@@ -60,7 +60,7 @@
                 </a>
                 <h2>My SHS Certification</h2>
                 <p class="study-para">
-                    Evidence that I am good student. 😌
+                    Evidence that I am a good student. 😌
                 </p>
                 <h6>May 21, 2018</h6>
             </div>
@@ -71,8 +71,8 @@
                 </a>
                 <h2>My SHS Diploma</h2>
                 <p class="study-para">
-                    "Thinking which career will I choose in the future." <br>
-                    I didn't thought before that I will be a developer soon.
+                    "Thinking which career I will choose in the future." I didn't think before that I would be a
+                    developer soon. 💙
                 </p>
                 <h6>May 10, 2018</h6>
             </div>
@@ -83,8 +83,8 @@
                 </a>
                 <h2>The SHS Graduation Pictorial</h2>
                 <p class="study-para">
-                    I graduated as a normal student and I am proud of that. <br>
-                    I now realize that I am not that great of a student.
+                    I graduated as a normal student, and I am proud of that.
+                    I now realize that I am not that great of a student. 😁
                 </p>
                 <h6>May 10, 2018</h6>
             </div>
@@ -99,8 +99,7 @@
                 <h2>My MikroTik Certified Network Associate & <br>
                     Cisco Certified Network Associate <br> Certifications</h2>
                 <p class="study-para">
-                    Proof that I can do some networking and hardware stuffs too. <br>
-                    But it is too long ago. 🙂
+                    Proof that I can do some networking and hardware stuff too. But it was too long ago. 🙂
                 </p>
                 <h6>May 19, 2017 <br> May 25 2017</h6>
             </div>
@@ -109,12 +108,12 @@
                 <a href="../raw-data/img/my-history/shs-id.jpg" target="_blank">
                     <img class="study-img" src="../raw-data/img/my-history/shs-id.jpg">
                 </a>
-                <h2>My Senior High School ID</h2>
+                <h2>My SHS ID</h2>
                 <p class="study-para">
-                    Watching this makes me recall the time when I get disappointed in myself. <br>
-                    I graduated in High School as an outstanding student but when I entered Senior High,
-                    all of my classmates, as far I know, are outstanding students THAN me. <br>
-                    I realized there's more in life and I should step up.
+                    Watching this makes me recall the time when I was disappointed in myself. I graduated from high
+                    school as an outstanding student, but when I entered senior high, all of my classmates, as far as I
+                    know, were outstanding students compared to me. I realized there's more in life, and I should step
+                    up. But I didn't do it due to a lack of ambition. 😑
                 </p>
             </div>
 
@@ -122,7 +121,7 @@
                 <a href="../raw-data/img/my-history/shs-photo.jpg" target="_blank">
                     <img class="study-img" src="../raw-data/img/my-history/shs-photo.jpg">
                 </a>
-                <h2>My Senior High School Photo</h2>
+                <h2>My SHS Photo</h2>
                 <p class="study-para">
                     The time when I started to want to know more.
                 </p>
