Correcting Grammars: exp-pages

--- a/exp-pages/1yr-leepe.html
+++ b/exp-pages/1yr-leepe.html
@@ -49,7 +49,7 @@
             </a>
             <div>
                 <h2>Leepe</h2>
-                <h5 class="text-center">The first company to hire me as Junior Programmer.</h5>
+                <h5 class="text-center">The first company to hire me as a Programmer</h5>
                 <h6 class="text-center">January &ndash; December, 2023</h6>
             </div>
 
