--- a/exp-pages/1yr-pbts.html
+++ b/exp-pages/1yr-pbts.html
@@ -62,12 +62,10 @@
                 </a>
                 <h2>PBTS Company</h2>
                 <p class="exp-para">
-                    I learned many things here as a Programmer and Software Bug Hunter. Haha!<br>
-                    You are maybe confused about what I said above that this is the place I first work as Programmer but
-                    the
-                    first Company that hired me is Leepe Company. It is because Leepe Company is an Outsourcing
-                    Company. It outsourced me to PBTS as Software Support and made me live in Carmona, Cavite for 6
-                    Months.
+                    I learned many things here as a programmer and software bug hunter. Haha! You are maybe confused
+                    about what I said above: that this is the place I first worked as a programmer, but the first
+                    company that hired me was Leepe Company. It is because Leepe Company is an outsourcing company. It
+                    outsourced me to PBTS as software support and made me live in Carmona, Cavite, for 6 months.
                 </p>
             </div>
 
@@ -77,12 +75,12 @@
                 </a>
                 <h2>E-Maintenance System</h2>
                 <p class="exp-para">
-                    The first existing system in PBTS Company that I supported. My works here are upgrading the
-                    app depends on the Client's Concerns and fixing the app if something is wrong or unnecessary
-                    within the software.<br>
-                    It is a complex system that is developed in Visual Basic Programming Language, Visual Studio
-                    2017 and ASP.NET Web forms Framework.<br>
-                    I am still supporting this Software until my Contract in PBTS is over.
+                    This is the first existing system at PBTS Company that I supported. My work here was to upgrade the
+                    app depending on the client's concerns and fix the app if something was wrong or unnecessary within
+                    the software.<br>
+                    It is a complex system that is developed in the Visual Basic Programming Language, Visual Studio
+                    2017, and the ASP.NET Web Forms Framework.<br>
+                    I am still supporting this software until my contract with PBTS is over.
                 </p>
                 <h6>January &ndash; June, 2023</h6>
             </div>
@@ -93,11 +91,11 @@
                 </a>
                 <h2>TT300 Controller Windows Application</h2>
                 <p class="exp-para">
-                    This is an existing complex system that is developed very long ago. It is made from Visual Basic
+                    This is an existing, complex system that was developed very long ago. It is made from Visual Basic
                     Version 6. <br>
-                    This app is upgraded by the senior programmer in our office in PBTS. What I only did is deploying
-                    this to the Client's Machine.<br>
-                    I also made a little changes to this system's codes to solve a little
+                    This app was upgraded by the senior programmer in our office in PBTS. What I only did was deploy
+                    this to the client's machine.<br>
+                    I also made a few changes to this system's codes to solve a little
                     problem.
                 </p>
                 <h6>June, 2023</h6>
@@ -109,10 +107,8 @@
                 </a>
                 <h2>Data Windows Form</h2>
                 <p class="exp-para">
-                    This is the third Single Windows Form I made in PBTS just like the BIB Tester (Info. Below) with the
-                    same
-                    development
-                    platform and framework.
+                    This is the third single Windows form I made in PBTS, just like the BIB Tester (information below),
+                    with the same development platform and framework.
                 </p>
                 <h6>June, 2023</h6>
             </div>
@@ -123,10 +119,8 @@
                 </a>
                 <h2>Graph App Windows Form</h2>
                 <p class="exp-para">
-                    This is the second Single Windows Form I made in PBTS just like the BIB Tester (Info. Below) with
-                    the same
-                    development
-                    platform and framework.
+                    This is the second single Windows form I made in PBTS, just like the BIB Tester (information below),
+                    with the same development platform and framework.
                 </p>
                 <h6>March, 2023</h6>
             </div>
@@ -137,12 +131,11 @@
                 </a>
                 <h2>BIB Tester Windows Form</h2>
                 <p class="exp-para">
-                    The name of the department where I am in PBTS is BSS (Business System Support), and the Head there
-                    is a
-                    Windows Programmer for a long time. And he is also developing while managing us. He always
-                    ask me to make a single Windows Form from Visual Studio 2010 and C# Programming Language, to add to
-                    the Windows
-                    Software he is currently developing.<br> This BIB Tester is the first Windows Form I made in PBTS.
+                    The name of the department where I am in PBTS is BSS (Business System Support), and the head there
+                    has been a Windows programmer for a long time. And he is also developing while managing us. He
+                    always asks me to make a single Windows form from Visual Studio 2010 and the C# programming language
+                    to add to the Windows software he is currently developing.<br> This BIB Tester is the first Windows
+                    Form I made in PBTS.
                 </p>
                 <h6>February, 2023</h6>
             </div>
