Correcting Grammars: REVIEW ALL

--- a/about-me.html
+++ b/about-me.html
@@ -89,7 +89,7 @@
                     <div class="card-title">Web Development</div>
                     <div class="card-snippet">
                         <p><span class="bold">Role:</span> Web Developer</p>
-                        <p><span class="bold">Technology:</span> C#, ASP.NET, HTML, CSS, JS, Bootstrap & SQL</p>
+                        <p><span class="bold">Technology:</span> C#, ASP.NET, HTML, CSS, JS, JQuery, Bootstrap & SQL</p>
                     </div>
                     <div class="card-readmore">2022 &ndash; Present</div>
                 </div>
