--- a/exp-pages/1yr-pbts.html
+++ b/exp-pages/1yr-pbts.html
@@ -105,7 +105,7 @@
                 <a href="../raw-data/img/exp/data-form.png" target="_blank">
                     <img class="exp-img" src="../raw-data/img/exp/data-form.png">
                 </a>
-                <h2>Data Windows Form</h2>
+                <h2>Data Form Windows Form</h2>
                 <p class="exp-para">
                     This is the third single Windows form I made in PBTS, just like the BIB Tester (information below),
                     with the same development platform and framework.
