--- a/services.html
+++ b/services.html
@@ -124,7 +124,7 @@
                 <br>
                 <h3 class="text-white left ml-25 bold">Desktop Application Development</h3>
                 <p class="text-white text-justice">
-                    - application software that is built for computers. Some are native applications that are written
+                    - An application software that is built for computers. Some are native applications that are written
                     for specific operating systems of computers, and others are cross-platform applications that can be
                     run on different operating systems. <br><br>
                     - It does not require any internet connection to run, and it must be downloaded to your computer in
