Adding information: exp-pages/leepe

--- a/exp-pages/1yr-leepe.html
+++ b/exp-pages/1yr-leepe.html
@@ -54,14 +54,43 @@
             </div>
 
             <div class="exp-box centerer">
-                <a href="#" target="_blank">
-                    <img class="exp-img" src="#">
+                <a href="../raw-data/img/exp/leepe-printout.png" target="_blank">
+                    <img class="exp-img" src="../raw-data/img/exp/leepe-printout.png">
                 </a>
-                <h2>Title</h2>
+                <h2>Leepe's ERP System Printing Design</h2>
                 <p class="exp-para">
-                    paragraph
+                    This is the second thing Leepe assigned me to do. The first one is when they assigned me to PBTS
+                    Company. Now, they've assigned me to copy the design from paper to their ERP printing feature. And
+                    as a man who knows more about HTML and CSS, I'd say this is my specialty. And this (screenshot
+                    above) is the outcome. 😎
                 </p>
-                <h6>Date</h6>
+                <h6>August &ndash; September, 2023</h6>
+            </div>
+
+            <div class="exp-box centerer">
+                <a href="../raw-data/img/exp/leepe-erp-system.png" target="_blank">
+                    <img class="exp-img" src="../raw-data/img/exp/leepe-erp-system.png">
+                </a>
+                <h2>Leepe's ERP System</h2>
+                <p class="exp-para">
+                    After designing the system's print, they assigned me to support and update the ERP system if
+                    something was wrong or unnecessary. I fixed their system and made it pure Leepe. Because the system
+                    was just a copy of the MFT Company ERP system. Actually, I don't know anything about it. 🤷‍♂️
+                </p>
+                <h6>September, 2023</h6>
+            </div>
+
+            <div class="exp-box centerer">
+                <a href="../raw-data/img/exp/40fied-erp-system.png" target="_blank">
+                    <img class="exp-img" src="../raw-data/img/exp/40fied-erp-system.png">
+                </a>
+                <h2>40fied's ERP System</h2>
+                <p class="exp-para">
+                    They assigned me to develop an ERP system for 40fied Solutions Company out of Leepe's ERP system. I
+                    just copied the whole system, changed some important details, and boom! There is now an ERP system
+                    for 40Field Solutions Company. 😁
+                </p>
+                <h6>October, 2023</h6>
             </div>
         </div>
     </main>
