Added new Project

--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,55 @@
     </header>
 
     <main>
+        <h2 class="text-white h2-lower" id="techwannabe-pet-collections">TechWannabe Pet Collections</h2>
+        <br>
+        <div class="info-wrapper">
+            <ul class="text-white info-list">
+                <li><span class="bold bg-blue">Name:</span><br> TechWannabe Pet Collections</li>
+                <li class="text-justify">
+                    <span class="bold bg-blue">Description:</span><br>
+                    -
+                </li>
+                <li><span class="bold bg-blue">Year:</span><br> 2023</li>
+                <li><span class="bold bg-blue">Repository:</span><br> <a class="improved-link-white"
+                        href="https://github.com/Erwin-Hadjirul/TechWannabePetCollections">https://github.com/Erwin-Hadjirul/TechWannabePetCollections</a>
+                </li>
+            </ul>
+        </div>
+        <br>
+        <div class="box-wrapper-grid snaps-inline">
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/favicon.ico"
+                    target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/favicon.ico"
+                        alt="App Icon"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/1 - home.png"
+                    target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/1 - home.png"
+                        alt="Screenshots"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/2 - bird.png"
+                    target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/2 - bird.png"
+                        alt="Screenshots"></a>
+            </div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/3 - dog.png"
+                    target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/3 - dog.png"
+                        alt="Screenshots"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/4 - cat.png"
+                    target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/4 - cat.png"
+                        alt="Screenshots"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/5 - fish.png"
+                    target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/5 - fish.png"
+                        alt="Screenshots"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/6 - details.png"
+                    target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/6 - details.png"
+                        alt="Screenshots"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/7 - shopping-cart.png"
+                    target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/7 - shopping-cart.png"
+                        alt="Screenshots"></a></div>
+            <div class="box-item-grid"><a
+                    href="raw-data/img/my-proj/techwannabe-pet-collections/8 - payment-gateway.png" target="_blank"><img
+                        src="raw-data/img/my-proj/techwannabe-pet-collections/8 - payment-gateway.png"
+                        alt="Screenshots"></a></div>
+        </div>
+        <div class="h2-lower"></div>
+
         <h2 class="text-white h2-lower" id="portfolio">My Personal Portfolio Website</h2>
         <br>
         <div class="info-wrapper">
