--- a/services.html
+++ b/services.html
@@ -90,8 +90,8 @@
                 <div class="text-justice">
                     <p>Sample Project:</p>
                     <br>
-                    <p class="text-red">No Available</p>
-                    <!-- - <a class="improved-link" href="#"></a> -->
+                    - <a class="improved-link" href="projects.html#techwannabe-pet-collections">TechWannabe Pet
+                        Collections</a>
                 </div>
                 <br>
                 <h2 class="text-white left ml-20 bold">Additional Information:</h2>
