Fixed New Project Nov 2023

--- a/about-me.html
+++ b/about-me.html
@@ -200,6 +200,21 @@
         <!-- Personal Projects -->
         <h2 class="text-white">Personal Projects</h2>
         <section class="cards">
+            <a class="card" href="projects.html#techwannabe-pet-collections">
+                <div class="card-image"
+                    style="background-image: url(raw-data/img/my-proj/techwannabe-pet-collections/favicon.ico); background-size: contain;">
+                </div>
+                <div class="card-content">
+                    <div class="card-title">TechWannabe Pet Collections</div>
+                    <div class="card-snippet">
+                        <p><span class="bold">Short Description:</span>
+                            The Logo of the website emphasizes the owner. In the Home Section, you can see all the
+                            pet...
+                        </p>
+                    </div>
+                    <div class="card-readmore">2023</div>
+                </div>
+            </a>
             <a class="card" href="projects.html#portfolio">
                 <div class="card-image"
                     style="background-image: url(raw-data/icons/android-chrome-512x512.png); background-size: contain;">
