--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,10 @@
                 <li><span class="bold bg-blue">Name:</span><br> TechWannabe Pet Collections</li>
                 <li class="text-justify">
                     <span class="bold bg-blue">Description:</span><br>
-                    -
+                    - The Logo of the website emphasizes the owner. In the Home Section, you can see all the pet
+                    categories available to buy and a few of their products. Every category has its own page, and all of
+                    their products are shown there. Clicking the picture would direct you to the Details Page of the
+                    product or pet. Then, you can add it to the shopping cart, and you may want to checkout it.
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2023</li>
                 <li><span class="bold bg-blue">Repository:</span><br> <a class="improved-link-white"
