--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,8 @@
                 <li><span class="bold bg-blue">Name:</span><br> TechWannabe Pet Collections</li>
                 <li class="text-justify">
                     <span class="bold bg-blue">Description:</span><br>
+                    - This website was made utilizing C#, the ASP.NET Web API, ASP.NET Blazor WebAssembly, HTML, CSS,
+                    and a little bit of JavaScript. <br>
                     - The Logo of the website emphasizes the owner. In the Home Section, you can see all the pet
                     categories available to buy and a few of their products. Every category has its own page, and all of
                     their products are shown there. Clicking the picture would direct you to the Details Page of the
