Fixed Small Primary Pic of new Project

--- a/projects.html
+++ b/projects.html
@@ -64,8 +64,8 @@
         </div>
         <br>
         <div class="box-wrapper-grid snaps-inline">
-            <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/favicon.ico"
-                    target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/favicon.ico"
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/eagle.jpg"
+                    target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/eagle.jpg"
                         alt="App Icon"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/1 - home.png"
                     target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/1 - home.png"
