--- a/about-me.html
+++ b/about-me.html
@@ -202,7 +202,7 @@
         <section class="cards">
             <a class="card" href="projects.html#techwannabe-pet-collections">
                 <div class="card-image"
-                    style="background-image: url(raw-data/img/my-proj/techwannabe-pet-collections/favicon.ico); background-size: contain;">
+                    style="background-image: url(raw-data/img/my-proj/techwannabe-pet-collections/eagle.jpg); background-size: contain;">
                 </div>
                 <div class="card-content">
                     <div class="card-title">TechWannabe Pet Collections</div>
